...
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMs-YM-bZv">
                                        <rect key="frame" x="0.0" y="445" width="530" height="45"/>
                                        <color key="backgroundColor" red="0.18244811890000001" green="0.76528728010000002" blue="0.69216853379999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                        <color key="tintColor" systemColor="systemBlueColor"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ydL-n4-D5M"/>
                                        </connections>
                                    </button>
...
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="calculateButton" destination="cMs-YM-bZv" id="SQa-cy-cQQ"/>
                        <outlet property="heightLabel" destination="r8d-MH-ekg" id="hvK-ZC-M58"/>
                        <outlet property="heightTextField" destination="tEP-z7-nvg" id="S8t-ep-sik"/>
                        <outlet property="hintLabel" destination="8f8-iG-555" id="PjU-hF-2CF"/>
                        <outlet property="stackView" destination="g2Q-8z-Sq4" id="9fg-K7-p8Y"/>
                        <outlet property="weightLabel" destination="mYl-rD-kMb" id="ype-wl-Hv6"/>
                        <outlet property="weightTextField" destination="Mmh-3R-kpF" id="QlQ-h1-LNU"/>
                        <segue destination="bf3-S8-uRW" kind="show" identifier="goToResult" id="kol-hD-UDY"/>
                    </connections>
                </viewController>
...
                                                <rect key="frame" x="0.0" y="0.0" width="500" height="45"/>
                                                <color key="backgroundColor" red="0.99288970229999995" green="0.33059364559999999" blue="0.61508178710000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="foK-gF-P54"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                                                <state key="normal" title="Save to Health App">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="healthKitSyncBtnPressed:" destination="bf3-S8-uRW" eventType="touchUpInside" id="HaE-f1-oHJ"/>
                                                </connections>
                                            </button>
...
                                                <rect key="frame" x="0.0" y="70" width="500" height="45"/>
                                                <color key="backgroundColor" red="0.20071482660000001" green="0.77304774519999997" blue="0.69999235869999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="4MG-Nw-9Eb"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="Recalculate">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="recalculateBtnPressed:" destination="bf3-S8-uRW" eventType="touchUpInside" id="88Q-yf-Cla"/>
                                                    <action selector="recalculateBtnPressed:" destination="nDX-jg-smr" eventType="touchUpInside" id="vLN-CK-3ty"/>
                                                </connections>
...
                                                <rect key="frame" x="0.0" y="0.0" width="520" height="50"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Lgr-0b-jok"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                                <state key="normal" title="OK">
                                                    <color key="titleColor" red="0.35150286559999999" green="0.70875138039999996" blue="0.47674161199999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="okButtonPressed:" destination="1js-Yu-8zF" eventType="touchUpInside" id="DrT-qD-fup"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I65-J0-H7u">
                                                <rect key="frame" x="0.0" y="70" width="520" height="30"/>
                                                <state key="normal" title="Skip for Now">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="cancelButtonPressed:" destination="1js-Yu-8zF" eventType="touchUpInside" id="dRO-BU-Nnz"/>
                                                </connections>
                                            </button>
...
