/* 
  Localizable.strings
  BMI Calculator Practice

  Created by Jason Ou Yang on 2020/6/5.
  Copyright © 2020 Jason Ou Yang. All rights reserved.
*/

// Height and weight label
"HEIGHT_LABEL" = "Height (cm)";
"WEIGHT_LABEL" = "Weight (kg)";

// Input Accessory Buttons
"BUTTON_NEXT" = "Next";
"BUTTON_DONE" = "Done";

// Imput Error
"EMPTY_INPUT" = "Height / Weight is not provided";
"ZERO_INPUT" = "Height & weight must not be 0";

// Health advice for user
"ADVICE_UNDERWEIGHT" = "A blowing wind can send you away. \nEat more food!";
"ADVICE_NORMAL" = "Fit as a fiddle.";
"ADVICE_OVERWEIGHT" = "Eat less \nMove more!";
"ADVICE_OBESITY" = "Your health is at great risk. \nGo seek help!";

// Alert messages
"SUCCESS_TITLE" = "Done!";
"SUCCESS_MESSAGE" = "Calculated BMI has been saved to HealthKit.";

"AUTH_ERROR_TITLE" = "Oops! An error occured";
"AUTH_ERROR_MESSAGE" = "Cannot save BMI data to Health App. Please make sure 'BMI Calculator' has access to Health database.";

"HEALTHKIT_ERROR_TITLE" = "Unknown error occured";
"HEALTHKIT_ERROR_MESSAGE" = "Something went wrong with HealthKit operation.";

// Auth View
"AUTH_TITLE" = "Sync your calculated results with Apple Health";
"AUTH_MESSAGE" = "Using BMI Calculator with Apple Health App empowers you to better manage your health. You will be able to see all of your health data in one place, so you can track your progress much easier.";
"AUTH_OK_BUTTON" = "OK";
"AUTH_SKIP_BUTTON" = "Skip for Now";
